Ecommerce - Istio-Kubernetes run/kubernetesfiles/customerservice_withgateway/customerservice-gateway.yml
apiVersion: networking.istio.io/v1alpha3
kind: Gateway
metadata:
  name: customerservice-gateway
spec:
  # The selector matches the ingress gateway pod labels.
  # If you installed Istio using Helm following the standard documentation, this would be "istio=ingress"
  selector:
    istio: ingressgateway # use istio default controller
  servers:
  - port:
      number: 8080
      name: http
      protocol: HTTP
    hosts:
    - "*"
---
apiVersion: networking.istio.io/v1alpha3
kind: VirtualService
metadata:
  name: customerservice-info
spec:
  hosts:
  - "*"
  gateways:
  - customerservice-gateway
  http:
  - match:
    - uri:
        prefix: /api/customers
    - uri:
        exact: /api/customers
    route:
    - destination:
        host: customerservice
        port:
          number: 80
